feat: fix logos
